[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Gdscript/SignUp.gd" type="Script" id=2]

[node name="SignUp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="VBoxContainer"]
position = Vector2( 234.327, 210.353 )
texture = ExtResource( 1 )

[node name="UserNameLabel" type="Label" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 480.0
margin_bottom = 274.0
text = "Username:"
align = 3
valign = 3

[node name="UserNameLineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 278.0
margin_right = 480.0
margin_bottom = 302.0

[node name="PasswordLabel" type="Label" parent="VBoxContainer"]
margin_top = 306.0
margin_right = 480.0
margin_bottom = 320.0
text = "Password:"
align = 3
valign = 3

[node name="PasswordLineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 324.0
margin_right = 480.0
margin_bottom = 348.0
secret = true

[node name="PasswordLabel2" type="Label" parent="VBoxContainer"]
margin_top = 352.0
margin_right = 480.0
margin_bottom = 366.0
text = "Password Confirm"
align = 3
valign = 3

[node name="PasswordLineEdit2" type="LineEdit" parent="VBoxContainer"]
margin_top = 370.0
margin_right = 480.0
margin_bottom = 394.0
secret = true

[node name="SignUpButton" type="Button" parent="VBoxContainer"]
margin_top = 398.0
margin_right = 480.0
margin_bottom = 418.0
text = "Create my account !"

[node name="LoginButton" type="Button" parent="VBoxContainer"]
margin_top = 422.0
margin_right = 480.0
margin_bottom = 442.0
text = "I already have an account"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
margin_top = 446.0
margin_right = 480.0
margin_bottom = 460.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="VBoxContainer/SignUpButton" to="." method="_on_SignUpButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
